test/language/spec/containment/invalid/external_comptime_conflict.topo
// TEST: external-comptime-conflict
// EXPECT-ERROR: 'external' and 'comptime' are mutually exclusive

namespace app {

public:
  external comptime void forbidden();

}
